--- a/RegistrationForm.html
+++ b/RegistrationForm.html
@@ -33,7 +33,7 @@
 	<label for="email">Email:</label>
 	<input name="email" type="email" placeholder="your email" required>
 
-	<label for="password">Password:</label>s
+	<label for="password">Password:</label>
 	<input name="password" type="password" pattern=".{5,10}" required title="Password must be between 5 and 10 characters">
 </div>
 <div>
@@ -70,7 +70,6 @@
 
 </form>
 <!-- ---------Birthday------------ -->
-
 
 
 </body>
