--- a/RegistrationForm.html
+++ b/RegistrationForm.html
@@ -8,7 +8,6 @@
 <h1>Register</h1>
 
 <!-- ---------name------------ -->
-
 <form action="https://www.google.com/flights/">
 	<label for="First Name">First Name:</label>
 	<input name="First" id="First Name" type="text" placeholder="John" required="Please fill out this field">
@@ -36,6 +35,8 @@
 	<label for="password">Password:</label>
 	<input name="password" type="password" pattern=".{5,10}" required title="Password must be between 5 and 10 characters">
 </div>
+	
+<!-- ---------Birthday------------ -->	
 <div>
 	<label for="birthday">Birthday:
 		<select name="day">
@@ -61,16 +62,8 @@
 <div>
 	<label for="agreed">I agree to the terms and conditions:</label>
 	<input id="checkbox" name="agreed" type="checkbox">
-</div>
-
-
-
-
-	<input type="submit">
+</div>	<input type="submit">
 
 </form>
-<!-- ---------Birthday------------ -->
-
-
 </body>
 </html>
